fix horizontal scrollbar n some resp

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,6 @@ h1, h2 {
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   position: relative;
 }
